syntax = "proto3";

option go_package = "./;userpb";

import "google/api/annotations.proto";

message CreateUserRequest {
    string email = 1;
    string password = 2;
    uint32 age = 3;
}

message CreateUserResponse {
    int32 id = 1;
    string email = 2;
    string password = 3;
    uint32 age = 4;
}

message AuthenticateRequest {
    string email = 1;
    string password = 2;
}

message AuthenticateResponse {
    bool success = 1;
}

message UpdateUserRequest {
    uint32 id = 1;
    string email = 2;
    string password = 3;
    uint32 age = 4;
}

message UpdateUserResponse {
    bool success = 1;
}

message GetUserRequest {
    uint32 id = 1;
}

message GetUserResponse {
    string email = 1;
    string password = 2;
    uint32 age = 3;
}

message DeleteUserRequest {
    uint32 id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

service UserService {

    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/users"
            body:  "*"
        };
    }

    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth",
            body: "*"
        };
    }

    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            put: "/api/v1/users/{id}"
            body: "*"
        };
    }

    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/api/v1/users/{id}"
        };
    }

    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/api/v1/users/{id}"
        };
    };

}